fixed feature alignment

--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ h2{
 }
 
 #spiderman{
-	background-image:url("https://games.mxdwn.com/wp-content/uploads/2018/09/marvels-spider-man-hero-banner-02-ps4-us-16jul18.jpg");
+	background-image:url("https://i.imgur.com/c8AgqZn.jpg");
 }
 
 #lastofus{
